force-app/main/default/objects/Cart_Item__c/Cart_Item__c.object-meta.xml
<CustomObject>
    <label>Cart Item</label>
    <pluralLabel>Cart Items</pluralLabel>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Cart Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>