force-app/main/default/objects/Cart_Item__c/validationRules/VR_Cart_Quantity_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Cart_Quantity_Positive</fullName>
    <active>true</active>
    <description>VR_Cart_Quantity_Positive</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be at least 1.</errorMessage>
</ValidationRule>